--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!--=============== FAVICON ===============-->
-    <link rel="shortcut icon" href="" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
 
     <!--=============== BOXICONS ===============-->
-
+    <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
 
     <!--=============== SWIPER CSS ===============-->
     <link rel="stylesheet" href="">
@@ -23,6 +23,16 @@
 <body>
     <!--=============== HEADER ===============-->
     <header class="header" id="header">
+        <nav class="nav container">
+            <a href="#" class="nav__logo">
+                A S M RADWAN
+            </a>
+            <div class="nav_menu">
+                <ul class="nav__list"></ul>
+
+            </div>
+        </nav>
+
 
     </header>
 
