--- a/index.html
+++ b/index.html
@@ -29,8 +29,34 @@
             </a>
             <div class="nav_menu">
                 <ul class="nav__list"></ul>
-
+                <li class="nav__item">
+                    <a href="#home" class="nav__link">
+                        <i class='bx bx-home'></i>
+                    </a>
+                </li>
+                <li class="nav__item">
+                    <a href="#about" class="nav__link">
+                        <i class='bx bx-user' ></i>
+                    </a>
+                </li>
+                <li class="nav__item">
+                    <a href="#skills" class="nav__link">
+                        <i class='bx bx-book' ></i>
+                    </a>
+                </li>
+                <li class="nav__item">
+                    <a href="#work" class="nav__link">
+                        <i class='bx bx-briefcase-alt-2' ></i>
+                    </a>
+                </li>
+                <li class="nav__item">
+                    <a href="#contact" class="nav__link">
+                        <i class='bx bx-message-square-detail' ></i>
+                    </a>
+                </li>
             </div>
+            <!-- theme change button -->
+            <i class='bx bx-moon change-theme' id="theme-button" ></i>
         </nav>
 
 
