--- a/index.html
+++ b/index.html
@@ -17,20 +17,18 @@
     <!--=============== CSS ===============-->
     <link rel="stylesheet" href="assets/css/styles.css">
 
-    <title> A S M RADWAN </title>
+    <title>エー エス エム レードワン A S M RADWAN</title>
 </head>
 
 <body>
     <!--=============== HEADER ===============-->
     <header class="header" id="header">
         <nav class="nav container">
-            <a href="#" class="nav__logo">
-                A S M RADWAN
-            </a>
-            <div class="nav_menu">
+            <a href="#" class="nav__logo">A S M RADWAN</a>
+            <div class="nav__menu">
                 <ul class="nav__list"></ul>
                 <li class="nav__item">
-                    <a href="#home" class="nav__link">
+                    <a href="#home" class="nav__link ">
                         <i class='bx bx-home'></i>
                     </a>
                 </li>
