--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
     <header class="header" id="header">
         <nav class="nav container">
             <a href="#" class="nav__logo">A S M RADWAN</a>
-            <div class="nav__menu">
+            <div class="nav__menu" >
                 <ul class="nav__list"></ul>
                 <li class="nav__item">
-                    <a href="#home" class="nav__link ">
+                    <a href="#home" class="nav__link active-link">
                         <i class='bx bx-home'></i>
                     </a>
                 </li>
