--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
     <!--=============== HEADER ===============-->
     <header class="header" id="header">
         <nav class="nav container">
-            <a href="#" class="nav__logo">A S M RADWAN</a>
-            <div class="nav__menu" >
+            <a href="#" class="nav__logo">エー エス エム レードワン</a>
+            <div class="nav__menu">
                 <ul class="nav__list"></ul>
                 <li class="nav__item">
                     <a href="#home" class="nav__link active-link">
@@ -64,7 +64,17 @@
     <main class="main">
         <!--=============== HOME ===============-->
         <section class="home section" id="home">
+            <div class="home__container container grid">
+                <div class="home__data">
 
+                    <span class="home__greeting">もしもし、私は </span>
+                    <h1 class="home__name">エー エス エム レードワン</h1>
+                    <h3 class="home__education">フルスタックエンジニア</h3>
+                    <div class="home__buttons"></div>
+
+                    <a download="" href="assets/pdf/Ansel-Cv.pdf" class="button button--ghost"> ダウンロード </a>
+                </div>
+            </div>
         </section>
 
         <!--=============== ABOUT ===============-->
