--- a/index.html
+++ b/index.html
@@ -70,9 +70,40 @@
                     <span class="home__greeting">もしもし、私は </span>
                     <h1 class="home__name">エー エス エム レードワン</h1>
                     <h3 class="home__education">フルスタックエンジニア</h3>
-                    <div class="home__buttons"></div>
+                    <div class="home__buttons">
 
-                    <a download="" href="assets/pdf/Ansel-Cv.pdf" class="button button--ghost"> ダウンロード </a>
+                    <a download="" href="assets/pdf/B-JET_CV_Template.pdf" class="button button--ghost"> ダウンロード 履歴書</a>
+                    <a href="#about" class="button">私について</a>
+                </div>
+                </div>
+                <div class="home__handle">
+                    <img src="assets/img/272683036_756969881956138_3378238440642238222_n.png" alt="handle" class="home__img">
+                </div>
+                <div class="home__social">
+                    <a href="https://www.linkedin.com/in/a-s-m-radwan-316597155/" class="home_social-link">
+                        <i class='bx bxl-linkedin-square'></i>
+                    </a>
+                    <a href="https://github.com/radwanromy" class="home_social-link">
+                        <i class='bx bxl-github'></i>
+                    </a>
+                    <a href="https://www.facebook.com/radwan.romy.100" class="home_social-link">
+                        <i class='bx bxl-facebook-circle' ></i>
+                    </a>
+                    <a href="https://www.instagram.com/radwanromy" class="home_social-link">
+                        <i class='bx bxl-instagram-alt' ></i>
+                    </a>
+                    <a href="" class="home_social-link">            
+<i class='bx bxl-slack'></i>
+                    </a>
+                    <a href="https://www.youtube.com/channel/UColDIGGLc7v6E4tZqDEzdXQ" class="home_social-link">
+                        <i class='bx bxl-youtube' ></i>
+                    </a>
+                    <a href="https://dribbble.com" class="home_social-link">
+                        <i class='bx bxl-dribbble' ></i>
+                    </a>
+
+
+
                 </div>
             </div>
         </section>
