--- a/index.html
+++ b/index.html
@@ -102,9 +102,11 @@
                         <i class='bx bxl-dribbble' ></i>
                     </a>
 
-
-
                 </div>
+                <a href="#about" class="home__scroll">
+                    <i class='bx bx-mouse home__scroll-icon' ></i>
+                    <span class="home__scroll-name">Scroll Down</span>
+                </a>
             </div>
         </section>
 
