--- a/index.html
+++ b/index.html
@@ -80,25 +80,25 @@
                     <img src="assets/img/272683036_756969881956138_3378238440642238222_n.png" alt="handle" class="home__img">
                 </div>
                 <div class="home__social">
-                    <a href="https://www.linkedin.com/in/a-s-m-radwan-316597155/" class="home_social-link">
+                    <a href="https://www.linkedin.com/in/a-s-m-radwan-316597155/" class="home__social-link">
                         <i class='bx bxl-linkedin-square'></i>
                     </a>
-                    <a href="https://github.com/radwanromy" class="home_social-link">
+                    <a href="https://github.com/radwanromy" class="home__social-link">
                         <i class='bx bxl-github'></i>
                     </a>
-                    <a href="https://www.facebook.com/radwan.romy.100" class="home_social-link">
+                    <a href="https://www.facebook.com/radwan.romy.100" class="home__social-link">
                         <i class='bx bxl-facebook-circle' ></i>
                     </a>
-                    <a href="https://www.instagram.com/radwanromy" class="home_social-link">
+                    <a href="https://www.instagram.com/radwanromy" class="home__social-link">
                         <i class='bx bxl-instagram-alt' ></i>
                     </a>
-                    <a href="" class="home_social-link">            
+                    <a href="" class="home__social-link">            
 <i class='bx bxl-slack'></i>
                     </a>
-                    <a href="https://www.youtube.com/channel/UColDIGGLc7v6E4tZqDEzdXQ" class="home_social-link">
+                    <a href="https://www.youtube.com/channel/UColDIGGLc7v6E4tZqDEzdXQ" class="home__social-link">
                         <i class='bx bxl-youtube' ></i>
                     </a>
-                    <a href="https://dribbble.com" class="home_social-link">
+                    <a href="https://dribbble.com" class="home__social-link">
                         <i class='bx bxl-dribbble' ></i>
                     </a>
 
