--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <header class="header" id="header">
         <nav class="nav container">
             <a href="#" class="nav__logo">エー エス エム レードワン</a>
-            <div class="nav__menu">
+            <div class="nav__menu" >
                 <ul class="nav__list"></ul>
                 <li class="nav__item">
                     <a href="#home" class="nav__link active-link">
@@ -72,12 +72,14 @@
                     <h3 class="home__education">フルスタックエンジニア</h3>
                     <div class="home__buttons">
 
-                    <a download="" href="assets/pdf/B-JET_CV_Template.pdf" class="button button--ghost"> ダウンロード 履歴書</a>
-                    <a href="#about" class="button">私について</a>
-                </div>
+                        <a download="" href="assets/pdf/B-JET_CV_Template.pdf" class="button button--ghost"> ダウンロード
+                            履歴書</a>
+                        <a href="#about" class="button">私について</a>
+                    </div>
                 </div>
                 <div class="home__handle">
-                    <img src="assets/img/272683036_756969881956138_3378238440642238222_n.png" alt="handle" class="home__img">
+                    <img src="assets/img/272683036_756969881956138_3378238440642238222_n.png" alt="handle"
+                        class="home__img">
                 </div>
                 <div class="home__social">
                     <a href="https://www.linkedin.com/in/a-s-m-radwan-316597155/" class="home__social-link">
@@ -87,24 +89,24 @@
                         <i class='bx bxl-github'></i>
                     </a>
                     <a href="https://www.facebook.com/radwan.romy.100" class="home__social-link">
-                        <i class='bx bxl-facebook-circle' ></i>
+                        <i class='bx bxl-facebook-circle'></i>
                     </a>
                     <a href="https://www.instagram.com/radwanromy" class="home__social-link">
-                        <i class='bx bxl-instagram-alt' ></i>
+                        <i class='bx bxl-instagram-alt'></i>
                     </a>
-                    <a href="" class="home__social-link">            
-<i class='bx bxl-slack'></i>
+                    <a href="" class="home__social-link">
+                        <i class='bx bxl-slack'></i>
                     </a>
                     <a href="https://www.youtube.com/channel/UColDIGGLc7v6E4tZqDEzdXQ" class="home__social-link">
-                        <i class='bx bxl-youtube' ></i>
+                        <i class='bx bxl-youtube'></i>
                     </a>
                     <a href="https://dribbble.com" class="home__social-link">
-                        <i class='bx bxl-dribbble' ></i>
+                        <i class='bx bxl-dribbble'></i>
                     </a>
 
                 </div>
                 <a href="#about" class="home__scroll">
-                    <i class='bx bx-mouse home__scroll-icon' ></i>
+                    <i class='bx bx-mouse home__scroll-icon'></i>
                     <span class="home__scroll-name">Scroll Down</span>
                 </a>
             </div>
