--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 </div>
                 <a href="#about" class="home__scroll">
                     <i class='bx bx-mouse home__scroll-icon'></i>
-                    <span class="home__scroll-name">Scroll Down</span>
+                    <span class="home__scroll-name">下へスクロール</span>
                 </a>
             </div>
         </section>
