--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
         <!--=============== ABOUT ===============-->
         <section class="about section" id="about">
 
+            <!-- radwan -->
         </section>
 
         <!--=============== SKILLS ===============-->
