--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
     <header class="header" id="header">
         <nav class="nav container">
             <a href="#" class="nav__logo">エー エス エム レードワン</a>
-            <div class="nav__menu">
+            <!-- <div class="menufix"> -->
+            <div class="nav__menu" >
                 <ul class="nav__list"></ul>
                 <li class="nav__item">
                     <a href="#home" class="nav__link active-link">
@@ -53,6 +54,7 @@
                     </a>
                 </li>
             </div>
+        <!-- </div> -->
             <!-- theme change button -->
             <i class='bx bx-moon change-theme' id="theme-button"></i>
         </nav>
