--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     <h3 class="home__education">フルスタックエンジニア</h3>
                     <div class="home__buttons">
 
-                        <a download="" href="assets/pdf/B-JET_CV_Template.pdf" class="button button--ghost"> ダウンロード
+                        <a download="" href="assets/pdf/A. S. M. Radwan.pdf" class="button button--ghost"> ダウンロード
                             履歴書</a>
                         <a href="#about" class="button">私について</a>
                     </div>
