01342dfged4fad234 commit

--- a/index.html
+++ b/index.html
@@ -117,7 +117,8 @@
         <!--=============== ABOUT ===============-->
         <section class="about section" id="about">
 
-            <!-- radwan -->
+           <span class="section__subtitle">私のイントロ</span>
+           <h2 class="section__title">私について</h2>
         </section>
 
         <!--=============== SKILLS ===============-->
