--- a/index.html
+++ b/index.html
@@ -119,6 +119,13 @@
 
            <span class="section__subtitle">私のイントロ</span>
            <h2 class="section__title">私について</h2>
+           <div class="about__container container grid">
+               <img src="assets/img/50805604.jfif" alt="" class="about__img">
+               <div class="about__data">
+                   <h3 class="about__title"></h3>
+                   <span class="about__subtitle"></span>
+               </div>
+           </div>
         </section>
 
         <!--=============== SKILLS ===============-->
