--- a/index.html
+++ b/index.html
@@ -122,9 +122,20 @@
            <div class="about__container container grid">
                <img src="assets/img/50805604.jfif" alt="" class="about__img">
                <div class="about__data">
-                   <h3 class="about__title"></h3>
-                   <span class="about__subtitle"></span>
+                <i class='bx bx-award'></i>
+                   <h3 class="about__title">Experience</h3>
+                   <span class="about__subtitle">Full-Stack Engineer</span>
                </div>
+
+               <div class="about__data">
+                <h3 class="about__title"></h3>
+                <span class="about__subtitle"></span>
+            </div>
+
+            <div class="about__data">
+                <h3 class="about__title"></h3>
+                <span class="about__subtitle"></span>
+            </div>
            </div>
         </section>
 
