--- a/index.html
+++ b/index.html
@@ -123,18 +123,20 @@
                <img src="assets/img/50805604.jfif" alt="" class="about__img">
                <div class="about__data">
                 <i class='bx bx-award'></i>
-                   <h3 class="about__title">Experience</h3>
-                   <span class="about__subtitle">Full-Stack Engineer</span>
+                   <h3 class="about__title">経験 </h3>
+                   <span class="about__subtitle">ほぼ1年専門的に</span>
                </div>
 
                <div class="about__data">
-                <h3 class="about__title"></h3>
-                <span class="about__subtitle"></span>
+                <i class='bx bx-briefcase-alt' ></i>
+                <h3 class="about__title">完了</h3>
+                <span class="about__subtitle">50以上 プロジェクト</span>
             </div>
 
             <div class="about__data">
-                <h3 class="about__title"></h3>
-                <span class="about__subtitle"></span>
+                <i class='bx bx-support' ></i>
+                <h3 class="about__title">フリーランサー</h3>
+                <span class="about__subtitle">ブルーバッジ検証済み</span>
             </div>
            </div>
         </section>
