--- a/index.html
+++ b/index.html
@@ -119,24 +119,36 @@
 
            <span class="section__subtitle">私のイントロ</span>
            <h2 class="section__title">私について</h2>
-           <div class="about__container container grid">
-               <img src="assets/img/50805604.jfif" alt="" class="about__img">
-               <div class="about__data">
-                <i class='bx bx-award'></i>
-                   <h3 class="about__title">経験 </h3>
-                   <span class="about__subtitle">ほぼ1年専門的に</span>
+           <div class="about__container container grid" >
+               <div align="center">
+                <img src="assets/img/50805604.jfif" alt="" class="about__img" align="center">
                </div>
-
+              
                <div class="about__data">
-                <i class='bx bx-briefcase-alt' ></i>
-                <h3 class="about__title">完了</h3>
-                <span class="about__subtitle">50以上 プロジェクト</span>
-            </div>
+                   <div class="about__info">
+                       <div class="about__box">
+                        <i class='bx bx-award about__icon'></i>
+                        <h3 class="about__title">経験 </h3>
+                        <span class="about__subtitle">ほぼ1年専門的に</span>
+                       </div>
 
-            <div class="about__data">
-                <i class='bx bx-support' ></i>
-                <h3 class="about__title">フリーランサー</h3>
-                <span class="about__subtitle">ブルーバッジ検証済み</span>
+                       <div class="about__box">
+                        <i class='bx bx-briefcase-alt about__icon' ></i>
+                        <h3 class="about__title">完了</h3>
+                        <span class="about__subtitle">50以上 プロジェクト</span>
+                    </div>
+
+                    <div class="about__box">
+                        <i class='bx bx-support about__icon' ></i>
+                        <h3 class="about__title">フリーランサー</h3>
+                        <span class="about__subtitle">ブルーバッジ検証済み</span>
+                    </div>
+                   </div>
+
+                   <p class="about__description">
+                    現在、私はERA-InfoTechLtdというCMMIレベル3の会社でフルスタック開発者として働いています。私はSpringBootとAngular13を使用したフルスタック開発の経験があります。SpringBootAngular13を使用して3つのプロジェクトに貢献しました（Bank Locker Service、E-payment、Stack Overflowなどのブログアプリ）。 Bank Asia Credit Card FundTransferSystemのライブプロジェクトにも貢献しています。要件に応じて十分だと思います。私の課外活動とコンピュータサイエンスのコースワークは、私がその仕事で従業員として成功することを可能にすると信じています。同封の履歴書に概説されているスキルと経験を考えると、私はあなたの組織から聞く価値のある資産になると信じています。バングラデシュのアメリカンインターナショナル大学での4年間で、合計148単位を修了し、現在は新卒です。求人は私にとって大きなチャンスです。大学のコースに加えて、AIUBComputerClubでWebサイト開発者としてWebサイト開発を行ってきました。フルスタック開発のUp-Workでもフリーランスをやっています。また、私はオンラインや大学の外で非常に多くのコースを受講しました。私はpython3、courser.orgのアルゴリズムを完了しました。これは不可欠であり、サイバーセキュリティ、およびシスコネットワークアカデミーのモノのインターネットは、シスコ、Udemy、Solo-learn、およびUdacityのコースも実施しました。私はアプリケーションベースの管理ソフトウェアを持っています。私は自分のCSE研究に関連するだけでなく、私の職業生活に役立つ多くの大きなプロジェクトを作成しました。私のソースフリーコードのいくつかが表示され、https：//github.com/radwanromyで動作します。
+                    
+                   </p>
             </div>
            </div>
         </section>
