--- a/index.html
+++ b/index.html
@@ -23,11 +23,14 @@
 <body>
     <!--=============== HEADER ===============-->
     <header class="header" id="header">
-        <nav class="nav container">
+        <nav class="nav container" align="center">
             <a href="#" class="nav__logo">エー エス エム レードワン</a>
             <!-- <div class="menufix"> -->
-            <div class="nav__menu">
-                <ul class="nav__list"></ul>
+            <div class="nav__menu" >
+                <ul class="nav__list" ></ul>
+            <div class="mmm" align="center">
+
+            
                 <li class="nav__item">
                     <a href="#home" class="nav__link active-link">
                         <i class='bx bx-home'></i>
@@ -54,6 +57,7 @@
                     </a>
                 </li>
             </div>
+        </div>
             <!-- </div> -->
             <!-- theme change button -->
             <i class='bx bx-moon change-theme' id="theme-button"></i>
@@ -146,9 +150,11 @@
                    </div>
 
                    <p class="about__description">
-                    現在、私はERA-InfoTechLtdというCMMIレベル3の会社でフルスタック開発者として働いています。私はSpringBootとAngular13を使用したフルスタック開発の経験があります。SpringBootAngular13を使用して3つのプロジェクトに貢献しました（Bank Locker Service、E-payment、Stack Overflowなどのブログアプリ）。 Bank Asia Credit Card FundTransferSystemのライブプロジェクトにも貢献しています。要件に応じて十分だと思います。私の課外活動とコンピュータサイエンスのコースワークは、私がその仕事で従業員として成功することを可能にすると信じています。同封の履歴書に概説されているスキルと経験を考えると、私はあなたの組織から聞く価値のある資産になると信じています。バングラデシュのアメリカンインターナショナル大学での4年間で、合計148単位を修了し、現在は新卒です。求人は私にとって大きなチャンスです。大学のコースに加えて、AIUBComputerClubでWebサイト開発者としてWebサイト開発を行ってきました。フルスタック開発のUp-Workでもフリーランスをやっています。また、私はオンラインや大学の外で非常に多くのコースを受講しました。私はpython3、courser.orgのアルゴリズムを完了しました。これは不可欠であり、サイバーセキュリティ、およびシスコネットワークアカデミーのモノのインターネットは、シスコ、Udemy、Solo-learn、およびUdacityのコースも実施しました。私はアプリケーションベースの管理ソフトウェアを持っています。私は自分のCSE研究に関連するだけでなく、私の職業生活に役立つ多くの大きなプロジェクトを作成しました。私のソースフリーコードのいくつかが表示され、https：//github.com/radwanromyで動作します。
                     
+                    現在、私はCMMIレベル3の会社であるERA-InfoTechLtdでフルスタック開発者として働いています。 SpringBootとAngular13を使用したフルスタック開発の経験があります。SpringBootAngular13を使用して3つのプロジェクトに貢献しました（Bank Locker Service、E-payment、Stack Overflowなどのブログアプリ）。彼はまた、Bank Asia Credit Card FundTransferSystemのライブプロジェクトにも貢献しています。要件にもよりますが、それで十分だと思います。私の課外活動とコンピュータサイエンスのコースワークは、私がその仕事の従業員として成功することを可能にすると信じています。同封の履歴書に概説されているスキルと経験を考えると、あなたの組織から聞くことは価値のある資産になると思います。彼はバングラデシュのアメリカンインターナショナル大学で4年間で合計148単位を修了し、現在は新卒です。採用は私にとって素晴らしい機会です。大学のコースに加えて、AIUBComputerClubでウェブサイト開発者としてウェブサイトを開発しています。フルスタック開発のアップワークでもフリーランスをやっています。また、私はオンラインや大学外で非常に多くのコースを受講しました。 python3、courser.orgのアルゴリズムを完了しました。これは不可欠であり、サイバーセキュリティとシスコネットワークアカデミーのモノのインターネットは、シスコ、Udemy、Solo-learn、およびUdacityに関するコースも実施しています。私はアプリケーションベースの管理ソフトウェアを持っています。私は、CSEの研究に関連するだけでなく、私の職業生活にも役立つ可能性のある多くの大きなプロジェクトを作成しました。私のソースフリーコードの一部が表示され、
+                    <a href="https://github.com/radwanromy">エー エス エム レードワン Github</a> で機能します。
                    </p>
+                   <a href="#contact" class="button">私に連絡して</a>
             </div>
            </div>
         </section>
