--- a/index.html
+++ b/index.html
@@ -181,7 +181,14 @@
         
         <!--=============== SKILLS ===============-->
         <section class="skills section" id="skills">
-           
+           <span class="section__subtitle">私の能力</span>
+           <h2 class="section__title">私の経験</h2>
+           <div class="skills__container container grid">
+               <div class="skills__content">
+                   <h3 class="skills__title">フルスタックエンジニア</h3>
+                   <div class="skills__box"></div>
+               </div>
+           </div>
         </section>
 
         <!--=============== SERVICES ===============-->
