--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                     </div>
 
                     <div class="about__box">
-                        <i class='bx bx-support about__icon' ></i>
+                        <i class='bx bx-badge-check about__icon' ></i>
                         <h3 class="about__title">フリーランサー</h3>
                         <span class="about__subtitle">ブルーバッジ検証済み</span>
                     </div>
@@ -185,8 +185,14 @@
            <h2 class="section__title">私の経験</h2>
            <div class="skills__container container grid">
                <div class="skills__content">
-                   <h3 class="skills__title">フルスタックエンジニア</h3>
-                   <div class="skills__box"></div>
+                   <h3 class="skills__title">フロントエンドの開発者</h3>
+                   <div class="skills__box">
+                       <div class="skills__group">
+                           <div class="skills__data">
+                               
+                           </div>
+                       </div>
+                   </div>
                </div>
            </div>
         </section>
