--- a/index.html
+++ b/index.html
@@ -189,9 +189,54 @@
                    <div class="skills__box">
                        <div class="skills__group">
                            <div class="skills__data">
-                               
+                            <i class='bx bxs-badge-check' ></i>
+                            <div>
+                                <h3 class="skills__name">Python</h3>
+                                <span class="skills__level">Advanced</span>
+                            </div>
+                           </div>
+
+                           <div class="skills__data">
+                            <i class='bx bxs-badge-check' ></i>
+                            <div>
+                                <h3 class="skills__name">Java</h3>
+                                <span class="skills__level">Advanced</span>
+                            </div>
+                           </div>
+
+                           <div class="skills__data">
+                            <i class='bx bxs-badge-check' ></i>
+                            <div>
+                                <h3 class="skills__name">TypeScript</h3>
+                                <span class="skills__level">Advanced</span>
+                            </div>
                            </div>
                        </div>
+                       <div class="skills__group">
+                        <div class="skills__data">
+                         <i class='bx bxs-badge-check' ></i>
+                         <div>
+                             <h3 class="skills__name"></h3>
+                             <span class="skills__level"></span>
+                         </div>
+                        </div>
+
+                        <div class="skills__data">
+                         <i class='bx bxs-badge-check' ></i>
+                         <div>
+                             <h3 class="skills__name"></h3>
+                             <span class="skills__level"></span>
+                         </div>
+                        </div>
+
+                        <div class="skills__data">
+                         <i class='bx bxs-badge-check' ></i>
+                         <div>
+                             <h3 class="skills__name"></h3>
+                             <span class="skills__level"></span>
+                         </div>
+                        </div>
+                    </div>
                    </div>
                </div>
            </div>
