--- a/index.html
+++ b/index.html
@@ -191,54 +191,116 @@
                            <div class="skills__data">
                             <i class='bx bxs-badge-check' ></i>
                             <div>
-                                <h3 class="skills__name">Python</h3>
-                                <span class="skills__level">Advanced</span>
-                            </div>
-                           </div>
-
-                           <div class="skills__data">
-                            <i class='bx bxs-badge-check' ></i>
-                            <div>
-                                <h3 class="skills__name">Java</h3>
-                                <span class="skills__level">Advanced</span>
-                            </div>
-                           </div>
-
-                           <div class="skills__data">
-                            <i class='bx bxs-badge-check' ></i>
-                            <div>
                                 <h3 class="skills__name">TypeScript</h3>
-                                <span class="skills__level">Advanced</span>
+                                <span class="skills__level">プロ</span>
+                            </div>
+                           </div>
+
+                           <div class="skills__data">
+                            <i class='bx bxs-badge-check' ></i>
+                            <div>
+                                <h3 class="skills__name">JavaScript</h3>
+                                <span class="skills__level">プロ</span>
+                            </div>
+                           </div>
+
+                           <div class="skills__data">
+                            <i class='bx bxs-badge-check' ></i>
+                            <div>
+                                <h3 class="skills__name">CSS & Bootstrap</h3>
+                                <span class="skills__level">プロ</span>
                             </div>
                            </div>
                        </div>
                        <div class="skills__group">
+
+                        <div class="skills__data">
+                            <i class='bx bxs-badge-check' ></i>
+                            <div>
+                                <h3 class="skills__name">HTML</h3>
+                                <span class="skills__level">プロ</span>
+                            </div>
+                           </div>
+
                         <div class="skills__data">
                          <i class='bx bxs-badge-check' ></i>
                          <div>
-                             <h3 class="skills__name"></h3>
-                             <span class="skills__level"></span>
+                             <h3 class="skills__name">React.js & Node.js</h3>
+                             <span class="skills__level">中級</span>
                          </div>
                         </div>
 
                         <div class="skills__data">
                          <i class='bx bxs-badge-check' ></i>
                          <div>
-                             <h3 class="skills__name"></h3>
-                             <span class="skills__level"></span>
+                             <h3 class="skills__name">PHP, AJAX & JSON</h3>
+                             <span class="skills__level">上級</span>
                          </div>
                         </div>
 
-                        <div class="skills__data">
-                         <i class='bx bxs-badge-check' ></i>
-                         <div>
-                             <h3 class="skills__name"></h3>
-                             <span class="skills__level"></span>
-                         </div>
-                        </div>
+                       
                     </div>
                    </div>
                </div>
+
+               <div class="skills__content">
+                <h3 class="skills__title">バックエンド開発者</h3>
+                <div class="skills__box">
+                    <div class="skills__group">
+                        <div class="skills__data">
+                         <i class='bx bxs-badge-check' ></i>
+                         <div>
+                             <h3 class="skills__name">Spring Boot-Java</h3>
+                             <span class="skills__level">プロ</span>
+                         </div>
+                        </div>
+
+                        <div class="skills__data">
+                         <i class='bx bxs-badge-check' ></i>
+                         <div>
+                             <h3 class="skills__name">Django-Python</h3>
+                             <span class="skills__level">プロ</span>
+                         </div>
+                        </div>
+
+                        <div class="skills__data">
+                         <i class='bx bxs-badge-check' ></i>
+                         <div>
+                             <h3 class="skills__name">C++ & OpenGL</h3>
+                             <span class="skills__level">上級</span>
+                         </div>
+                        </div>
+                    </div>
+                    <div class="skills__group">
+
+                     <div class="skills__data">
+                         <i class='bx bxs-badge-check' ></i>
+                         <div>
+                             <h3 class="skills__name">PLSQL</h3>
+                             <span class="skills__level">プロ</span>
+                         </div>
+                        </div>
+
+                     <div class="skills__data">
+                      <i class='bx bxs-badge-check' ></i>
+                      <div>
+                          <h3 class="skills__name">SQL & MySQl</h3>
+                          <span class="skills__level">プロ</span>
+                      </div>
+                     </div>
+
+                     <div class="skills__data">
+                      <i class='bx bxs-badge-check' ></i>
+                      <div>
+                          <h3 class="skills__name">C# & PHP</h3>
+                          <span class="skills__level">上級</span>
+                      </div>
+                     </div>
+
+                    
+                 </div>
+                </div>
+            </div>
            </div>
         </section>
 
