--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                         <div class="skills__data">
                          <i class='bx bxs-badge-check' ></i>
                          <div>
-                             <h3 class="skills__name">React.js & Node.js</h3>
+                             <h3 class="skills__name">React & Node</h3>
                              <span class="skills__level">中級</span>
                          </div>
                         </div>
@@ -233,7 +233,7 @@
                         <div class="skills__data">
                          <i class='bx bxs-badge-check' ></i>
                          <div>
-                             <h3 class="skills__name">PHP, AJAX & JSON</h3>
+                             <h3 class="skills__name">AJAX & JSON</h3>
                              <span class="skills__level">上級</span>
                          </div>
                         </div>
