--- a/index.html
+++ b/index.html
@@ -310,8 +310,8 @@
 
         <!--=============== SERVICES ===============-->
         <section class="services section">
-            <h1 align="center">The Web Site Is On Going Development Phase</h1>
-            <h1 align="center">The Web Site Is On Going Development Phase</h1>
+            <h1 align="center">ウェブサイトは開発段階にあります!</h1>
+            <h1 align="center">The Web Site Is On Going Development Phase!</h1>
             <span class="section__subtitle">My Services</span>
         </section>
 
