--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <div class="home__container container grid">
                 <div class="home__data">
 
-                    <span class="home__greeting">もしもし、私は </span>
+                    <span class="home__greeting">もしもし</span>
                     <h1 class="home__name">エー エス エム レードワン</h1>
                     <h3 class="home__education">フルスタックエンジニア</h3>
                     <div class="home__buttons">
