--- a/index.html
+++ b/index.html
@@ -313,27 +313,27 @@
             <h1 align="center">ウェブサイトは開発段階にあります!</h1>
             <h1 align="center">The Web Site Is On Going Development Phase!</h1>
             <span class="section__subtitle">私のサービス</span>
-            <h2 class="section__title">What I offer</h2>
+            <h2 class="section__title">私が提供しているもの</h2>
 
             <div class="services__container container grid">
                 <div class="services__card">
-                    <h3 class="services__tilte">Website <br> Developer</h3>
+                    <h3 class="services__tilte">ウェブサイト <br> デベロッパー</h3>
                     <span class="services__button">
-                        See More <i class='bx bx-right-arrow-alt'></i>
+                        続きを見る <i class='bx bx-right-arrow-alt'></i>
                     </span>
                 </div>
 
                 <div class="services__card">
-                    <h3 class="services__tilte">Website <br> Designer </h3>
+                    <h3 class="services__tilte">ウェブサイト <br> デザイナー </h3>
                     <span class="services__button">
-                        See More <i class='bx bx-right-arrow-alt'></i>
+                        続きを見る <i class='bx bx-right-arrow-alt'></i>
                     </span>
                 </div>
 
                 <div class="services__card">
-                    <h3 class="services__tilte">Full-Stack <br> Development </h3>
+                    <h3 class="services__tilte">フルスタック <br> デベロッパー </h3>
                     <span class="services__button">
-                        See More <i class='bx bx-right-arrow-alt'></i>
+                        続きを見る <i class='bx bx-right-arrow-alt'></i>
                     </span>
                 </div>
             </div>
