--- a/index.html
+++ b/index.html
@@ -319,21 +319,21 @@
                 <div class="services__card">
                     <h3 class="services__tilte">ウェブサイト <br> デベロッパー</h3>
                     <span class="services__button">
-                        続きを見る <i class='bx bx-right-arrow-alt'></i>
+                        続きを見る <i class='bx bx-right-arrow-alt services__icon'></i>
                     </span>
                 </div>
 
                 <div class="services__card">
                     <h3 class="services__tilte">ウェブサイト <br> デザイナー </h3>
                     <span class="services__button">
-                        続きを見る <i class='bx bx-right-arrow-alt'></i>
+                        続きを見る <i class='bx bx-right-arrow-alt services__icon'></i>
                     </span>
                 </div>
 
                 <div class="services__card">
                     <h3 class="services__tilte">フルスタック <br> デベロッパー </h3>
                     <span class="services__button">
-                        続きを見る <i class='bx bx-right-arrow-alt'></i>
+                        続きを見る <i class='bx bx-right-arrow-alt services__icon'></i>
                     </span>
                 </div>
             </div>
