--- a/index.html
+++ b/index.html
@@ -321,6 +321,25 @@
                     <span class="services__button">
                         続きを見る <i class='bx bx-right-arrow-alt services__icon'></i>
                     </span>
+
+                    <div class="services__model">
+                        <div class="services__model-content">
+                            <i class='bx bx-x services__model-close'></i>
+
+                            <h3 class="services__model-tilte">ウェブサイト デベロッパー</h3>
+                            <p class="services__model-description">
+                                現在、私はCMMIレベル3の会社であるERA-InfoTechLtdでフルスタック開発者として働いています。
+                                SpringBootとAngular13を使用したフルスタック開発の経験があります。SpringBootAngular13を使用して3つのプロジェクトに貢献しました（Bank
+                                Locker Service、E-payment、Stack Overflowなどのブログアプリ）。彼はまた、Bank Asia Credit Card
+                                FundTransferSystemのライブプロジェクトにも貢献しています。要件にもよりますが、それで十分だと思います。私の課外活動とコンピュータサイエンスのコースワークは、私がその仕事の従業員として成功することを可能にすると信じています。
+                            </p>
+                            <ul class="services__model-list">
+                                
+                            </ul>
+                        </div>
+                    </div>
+
+
                 </div>
 
                 <div class="services__card">
