--- a/index.html
+++ b/index.html
@@ -334,7 +334,40 @@
                                 FundTransferSystemのライブプロジェクトにも貢献しています。要件にもよりますが、それで十分だと思います。私の課外活動とコンピュータサイエンスのコースワークは、私がその仕事の従業員として成功することを可能にすると信じています。
                             </p>
                             <ul class="services__model-list">
-                                
+                                <li class="services__model-item">
+                                    <i class='bx bx-check services__model-icon' ></i>
+                                    <p class="services__model-info">
+
+                                    </p>
+                                </li>
+
+                                <li class="services__model-item">
+                                    <i class='bx bx-check services__model-icon' ></i>
+                                    <p class="services__model-info">
+                                       2 Ideveloper
+                                    </p>
+                                </li>
+
+                                <li class="services__model-item">
+                                    <i class='bx bx-check services__model-icon' ></i>
+                                    <p class="services__model-info">
+                                        3 Ideveloper
+                                    </p>
+                                </li>
+
+                                <li class="services__model-item">
+                                    <i class='bx bx-check services__model-icon' ></i>
+                                    <p class="services__model-info">
+                                        4 Ideveloper
+                                    </p>
+                                </li>
+
+                                <li class="services__model-item">
+                                    <i class='bx bx-check services__model-icon' ></i>
+                                    <p class="services__model-info">
+                                        5 Ideveloper
+                                    </p>
+                                </li>
                             </ul>
                         </div>
                     </div>
