--- a/index.html
+++ b/index.html
@@ -496,7 +496,14 @@
 
         <!--=============== WORK ===============-->
         <section class="work section" id="work">
-
+            <h1 align="center">ウェブサイトは開発段階にあります!</h1>
+            <h1 align="center">The Web Site Is On Going Development Phase!</h1>
+         
+            <span class="section__subtitle">My Portfolio</span>
+            <h2 class="section__title">Recent Works</h2>
+            <div class="work__filters">
+                
+            </div>
         </section>
 
         <!--=============== TESTIMONIALS ===============-->
